--- a/docs/modules/releasenotes/pages/changelog.adoc
+++ b/docs/modules/releasenotes/pages/changelog.adoc
@@ -1,16 +1,34 @@
-[[release-32-changelog]]
+[[release-33-changelog]]
 
 = Changelog
 
-[[releasenotes-changelog-32.0.6]]
+[[releasenotes-changelog-33.0.0]]
 
-== Release 32.0.6
+== Release 33.0.0
 
-Release 32.0.6 contains a bunch of changes including UI cleanups, a number
-of access/role fixes, and other bug fixes, plus a ton of documentation
-updates and a new feature to show news and tips from an RSS feed in the UI.
+Release 33.0.0 is the first major release in the 33.x series.
+It contains a bunch of changes, including metadata support in many more configs, a revamped node list, and more.
 
-The codename for Horizon 32.0.6 is https://wikipedia.org/wiki/Breakcore[_Breakcore_].
+The codename for Horizon 33.0.0 is https://wikipedia.org/wiki/Breakcore[_Breakcore_].
+
+=== Enhancement
+
+* special nodes availability (Issue https://issues.opennms.org/browse/NMS-9797[NMS-9797])
+* Add var-bind section into notification docs (Issue https://issues.opennms.org/browse/NMS-13273[NMS-13273])
+* Provisiond threads description discrepancies (Issue https://issues.opennms.org/browse/NMS-14766[NMS-14766])
+* Metadata DSL: Add metadata interpolation capability onto more threshold fields (Issue https://issues.opennms.org/browse/NMS-15667[NMS-15667])
+* document the asynchronous datacollection engine (Issue https://issues.opennms.org/browse/NMS-15737[NMS-15737])
+* enable async polling by default (Issue https://issues.opennms.org/browse/NMS-15738[NMS-15738])
+* Switch our Docker base to UBI (Issue https://issues.opennms.org/browse/NMS-15788[NMS-15788])
+* Docs: Add install note on DNS resolution (Issue https://issues.opennms.org/browse/NMS-15792[NMS-15792])
+* Extend PageSequenceMonitor to allow basic auth credentials (Issue https://issues.opennms.org/browse/NMS-15802[NMS-15802])
+* Expand BlueCat DNS Data Collection (Issue https://issues.opennms.org/browse/NMS-15865[NMS-15865])
+* Add confd support to Sentinel container (Issue https://issues.opennms.org/browse/NMS-16149[NMS-16149])
+* Docs: Remove deprecated resourcecli section (Issue https://issues.opennms.org/browse/NMS-16216[NMS-16216])
+* Update install script to clear Karaf cache (Issue https://issues.opennms.org/browse/NMS-16226[NMS-16226])
+* Upgrade to latest Karaf 4.3 (Issue https://issues.opennms.org/browse/NMS-16249[NMS-16249])
+* Deprecate VMware 3-5 collection/graphs (Issue https://issues.opennms.org/browse/NMS-16266[NMS-16266])
+* Fix formatting in snmp-graph.properties.d files (Issue https://issues.opennms.org/browse/NMS-16269[NMS-16269])
 
 === Bug
 
@@ -18,303 +36,91 @@ The codename for Horizon 32.0.6 is https://wikipedia.org/wiki/Breakcore[_Breakco
 * R-Core fails to install following the Horizon 30 Install Docs (Issue https://issues.opennms.org/browse/NMS-14777[NMS-14777])
 * Surveillance Dashboard shows acknowledged Alarms (Issue https://issues.opennms.org/browse/NMS-15448[NMS-15448])
 * Access Denied when deleting a node with admin user (Issue https://issues.opennms.org/browse/NMS-15746[NMS-15746])
+* Typo in Configuring Minion via confd README (Issue https://issues.opennms.org/browse/NMS-15901[NMS-15901])
+* "Dismiss" in Usage Statistics Sharing Notice is misleading (Issue https://issues.opennms.org/browse/NMS-16027[NMS-16027])
+* Links in node table open both in current tab and in a new tab (Issue https://issues.opennms.org/browse/NMS-16047[NMS-16047])
+* Fix Geographical Map after vue-leaflet upgrade (Issue https://issues.opennms.org/browse/NMS-16065[NMS-16065])
+* Top of page search displays 'Show nodes with severity' multiple times (Issue https://issues.opennms.org/browse/NMS-16067[NMS-16067])
+* Device config upload failed with org.apache.sshd.common.SshException: EdDSA provider not supported (Issue https://issues.opennms.org/browse/NMS-16131[NMS-16131])
+* Data choices plugin throws a NPE when user clicks on show collected data. (Issue https://issues.opennms.org/browse/NMS-16151[NMS-16151])
 * Event parameters with `<>` not rendering in event/alarm views (Issue https://issues.opennms.org/browse/NMS-16157[NMS-16157])
 * Users with ROLE_READONLY can add, modify, and delete alarm memos (Issue https://issues.opennms.org/browse/NMS-16162[NMS-16162])
-* Events: filter and advanced search / method GET is not supported (Issue https://issues.opennms.org/browse/NMS-16232[NMS-16232])
-* VmwareCimMonitor/VmwareCimCollector not working anymore (Issue https://issues.opennms.org/browse/NMS-16236[NMS-16236])
+* Docs: Meridian plugins reference wrong package names (Issue https://issues.opennms.org/browse/NMS-16164[NMS-16164])
+* Fix resource types for default Postgres collection (Issue https://issues.opennms.org/browse/NMS-16165[NMS-16165])
+* Service detail page displays wrong collectd package (Issue https://issues.opennms.org/browse/NMS-16167[NMS-16167])
+* enlinkd logging hibernate errors (lack of unique index) (Issue https://issues.opennms.org/browse/NMS-16199[NMS-16199])
+* upgrade ActiveMQ to latest 5.15.x (Issue https://issues.opennms.org/browse/NMS-16218[NMS-16218])
+* Documentation build failing: cannot find antora/xref-validator (Issue https://issues.opennms.org/browse/NMS-16227[NMS-16227])
+* Node structure: fix sorting (Issue https://issues.opennms.org/browse/NMS-16246[NMS-16246])
 * OpenConfig Connector parameter frequency in incorrect unit (Issue https://issues.opennms.org/browse/NMS-16253[NMS-16253])
 * Container flag `-t` does not pass correct arguments (Issue https://issues.opennms.org/browse/NMS-16265[NMS-16265])
-* OpenConfig server logs invalid sample interval unit ?s when frequency is set to 4 digits or higher (Issue https://issues.opennms.org/browse/NMS-16280[NMS-16280])
-* LegacyDatetimeFormatterTest.testParse fails to parse date time when locale is set to `en_CA-UTF-8` (Issue https://issues.opennms.org/browse/NMS-16288[NMS-16288])
 
-=== Enhancement
+=== Story
 
-* Add command to Karaf shell to manually trigger Metadata Adapter (Issue https://issues.opennms.org/browse/NMS-13922[NMS-13922])
-* Karaf command to display event details (Issue https://issues.opennms.org/browse/NMS-15130[NMS-15130])
-* Add debug logging to SNMP Property Extenders on match failure (Issue https://issues.opennms.org/browse/NMS-15743[NMS-15743])
+* Upgrade Spring from 4.2 to 4.3 (Issue https://issues.opennms.org/browse/NMS-12090[NMS-12090])
+* Metadata DSL: Documentation for Metadata DSL updates (Issue https://issues.opennms.org/browse/NMS-15774[NMS-15774])
+* Document change in login password behaviour (Issue https://issues.opennms.org/browse/NMS-15775[NMS-15775])
+* Smoke test for Admin password change (Issue https://issues.opennms.org/browse/NMS-15866[NMS-15866])
+* Admin Password Change: UX Review and Updates (Issue https://issues.opennms.org/browse/NMS-15867[NMS-15867])
+* Admin Password Change: Merge to develop (Issue https://issues.opennms.org/browse/NMS-15868[NMS-15868])
+* User is redirected to landing page after password change is done (Issue https://issues.opennms.org/browse/NMS-16036[NMS-16036])
+* Use pinia instead of vuex in Vue UI (Issue https://issues.opennms.org/browse/NMS-16043[NMS-16043])
+* Add pinia stores to UI but do not yet activate them (Issue https://issues.opennms.org/browse/NMS-16068[NMS-16068])
+* Metadata DSL: Persist poller parameters as meta data (Issue https://issues.opennms.org/browse/NMS-16146[NMS-16146])
+* Use a different html parser to replace jsoup and owasp functionality (Issue https://issues.opennms.org/browse/NMS-16183[NMS-16183])
+* Node structure: more query params (fs:fid, snmp, sys) (Issue https://issues.opennms.org/browse/NMS-16197[NMS-16197])
 * Remove plugin 'opennms-cloud-plugin' from installation (Issue https://issues.opennms.org/browse/NMS-16219[NMS-16219])
-* Update install script to clear Karaf cache (Issue https://issues.opennms.org/browse/NMS-16226[NMS-16226])
-* Docs: Remove reference to 'opennms-cloud-plugin' plugin (Issue https://issues.opennms.org/browse/NMS-16231[NMS-16231])
-* OpenShift: Document the impact of disabling allowPrivilegeEscalation (Issue https://issues.opennms.org/browse/NMS-16239[NMS-16239])
-* RSS Feeds Panel showing OpenNMS Blog content (Issue https://issues.opennms.org/browse/NMS-16250[NMS-16250])
-* Document RSS feature (Issue https://issues.opennms.org/browse/NMS-16255[NMS-16255])
-* Docs: Create documentation on how to create graph definitions (Issue https://issues.opennms.org/browse/NMS-16258[NMS-16258])
+* Geo Map: enable user-defined map to be the default one (Issue https://issues.opennms.org/browse/NMS-16229[NMS-16229])
+* DOCS: Document Geographical Map user-defined map (Issue https://issues.opennms.org/browse/NMS-16230[NMS-16230])
+* Add node-gyp to fix CircleCI build-ui errors (Issue https://issues.opennms.org/browse/NMS-16242[NMS-16242])
 * News Feed: UI Panel and REST Service (Issue https://issues.opennms.org/browse/NMS-16282[NMS-16282])
-* Docs: Update install docs for monitoring database connection (Issue https://issues.opennms.org/browse/NMS-16286[NMS-16286])
-* Update container confd to default Postgres SSL to prefer (Issue https://issues.opennms.org/browse/NMS-16287[NMS-16287])
-
-
-[[releasenotes-changelog-32.0.5]]
-
-== Release 32.0.5
-
-Release 32.0.5 contains a bunch of security updates to Drools, Hibernate, Jetty, and more, plus a number of other bug fixes and a slew of documentation updates.
-
-The codename for Horizon 32.0.5 is https://volt.fm/genre/6385/deep-swedish-rock[_Deep Swedish Rock_].
-
-=== Enhancement
-
-* BMP docs could use some TLC (Issue https://issues.opennms.org/browse/NMS-13891[NMS-13891])
-* Provisiond threads description discrepancies (Issue https://issues.opennms.org/browse/NMS-14766[NMS-14766])
-* OpenShift: Documentation (Issue https://issues.opennms.org/browse/NMS-16108[NMS-16108])
-* Backport Drools 8.x to foundation 2023 to address a couple of CVEs (Issue https://issues.opennms.org/browse/NMS-16179[NMS-16179])
-* Integrate hibernate-core related patch from Debian (Issue https://issues.opennms.org/browse/NMS-16181[NMS-16181])
-* Version bump of json for CVE-2023-5072 (Issue https://issues.opennms.org/browse/NMS-16191[NMS-16191])
-* Version bump of jetty to 9.4.53 version (Issue https://issues.opennms.org/browse/NMS-16192[NMS-16192])
-* Bump to the latest netty 4 version (Issue https://issues.opennms.org/browse/NMS-16193[NMS-16193])
-* Version bump of snappy java (Issue https://issues.opennms.org/browse/NMS-16194[NMS-16194])
-* Docs: Remove deprecated resourcecli section (Issue https://issues.opennms.org/browse/NMS-16216[NMS-16216])
-* Post install/upgrade instructions on how to join OpenNMS Community (Issue https://issues.opennms.org/browse/NMS-16213[NMS-16213])
-
-=== Bug
-
-* Local Geo Map (using gwt.openlayers.url) working in version 29.0.1 is not anymore in 31.0.3-1 (Issue https://issues.opennms.org/browse/NMS-15400[NMS-15400])
-* Access Denied when deleting a node with admin user (Issue https://issues.opennms.org/browse/NMS-15746[NMS-15746])
-* Map dashlet for Ops Boards references old map systems (Issue https://issues.opennms.org/browse/NMS-16044[NMS-16044])
-* Reports -> Chart page does not load graphs (Issue https://issues.opennms.org/browse/NMS-16085[NMS-16085])
-* Event parameters with `<>` not rendering in event/alarm views (Issue https://issues.opennms.org/browse/NMS-16157[NMS-16157])
-* Add Basic Auth to OpenConfig gNMI for Call Credentials (Issue https://issues.opennms.org/browse/NMS-16158[NMS-16158])
-
-[[releasenotes-changelog-32.0.4]]
-
-== Release 32.0.4
-
-Release 32.0.4 contains documentation updates as well as a number of bug fixes and enhancements including Sentinel fixes, improvements to running in containers, metadata support improvements, and some other small changes.
-
-The codename for Horizon 32.0.4 is https://wikipedia.org/wiki/$$Eurovision_Song_Contest$$[_Classic Eurovision_].
-
-=== Bug
-
-* login.jsp page is still visible/accessible after being authenticated by pre-authentication (Issue https://issues.opennms.org/browse/NMS-14078[NMS-14078])
-* Fix Event documentation formatting (Issue https://issues.opennms.org/browse/NMS-15603[NMS-15603])
-* Sentinel depends on unpackaged /opt/sentinel/etc/datacollection-config.xml (Issue https://issues.opennms.org/browse/NMS-15695[NMS-15695])
-* Container ignores environment variable OPENNMS_DATABASE_CONNECTION_MINPOOL or confd opennms/database/connection/minpool configuration (Issue https://issues.opennms.org/browse/NMS-16141[NMS-16141])
-* Postgres error when creating a database from source database template1 (Issue https://issues.opennms.org/browse/NMS-16143[NMS-16143])
-* Container's java binary is missing cap_net_raw capability (Issue https://issues.opennms.org/browse/NMS-16145[NMS-16145])
-* SENTINEL_HOME points to wrong location in fix-permissions (Issue https://issues.opennms.org/browse/NMS-16159[NMS-16159])
-* Update Core confd database with new schema (Issue https://issues.opennms.org/browse/NMS-16163[NMS-16163])
-
-=== Enhancement
-
-* Basic BMP Setup (Issue https://issues.opennms.org/browse/NMS-13893[NMS-13893])
-* BMP set up with Minion (Issue https://issues.opennms.org/browse/NMS-13894[NMS-13894])
-* BMP Setup with Sentinel (Issue https://issues.opennms.org/browse/NMS-13895[NMS-13895])
-* Quick install script for first time evaluator and training (Issue https://issues.opennms.org/browse/NMS-14811[NMS-14811])
-* Expand flow thresholding documentation (Issue https://issues.opennms.org/browse/NMS-15276[NMS-15276])
-* Add link to configure SNMP Community strings from node admin page (Issue https://issues.opennms.org/browse/NMS-15772[NMS-15772])
-* Make pool size configurable per data source. (Issue https://issues.opennms.org/browse/NMS-16051[NMS-16051])
-* Monitored Service Rest API Updates for OPG (Issue https://issues.opennms.org/browse/NMS-16160[NMS-16160])
-* opennms-js updates for Monitored Services for OPG (Issue https://issues.opennms.org/browse/NMS-16161[NMS-16161])
-* Metadata DSL: Add effective values of service parameters in Karaf poll command (Issue https://issues.opennms.org/browse/NMS-16119[NMS-16119])
-* Add language to docs for how to find schema to Kafka Producer (Issue https://issues.opennms.org/browse/NMS-16133[NMS-16133])
-* Remove availability monitor content from documentation (Issue https://issues.opennms.org/browse/NMS-16135[NMS-16135])
-* Migrate Tl1 docs from wiki (Issue https://issues.opennms.org/browse/NMS-16150[NMS-16150])
-
-[[releasenotes-changelog-32.0.3]]
-
-== Release 32.0.3
-
-Release 32.0.3 contains a bunch of documentation updates, as well as a number of bug fixes and enhancements including improvements to the Karaf core startup, polling and node search fixes, IPv6 support in ILR, and a fix for loading the Cortex timeseries plugin.
-
-The codename for Horizon 32.0.3 is https://wikipedia.org/wiki/$$Acid_techno$$[_Acid Techno_].
-
-=== Enhancement
-
-* documentation enhancement for discard-uei (Issue https://issues.opennms.org/browse/NMS-3552[NMS-3552])
-* BMP Introduction (Issue https://issues.opennms.org/browse/NMS-13892[NMS-13892])
-* newts set OPENNMS_CASSANDRA_DC using template (Issue https://issues.opennms.org/browse/NMS-16025[NMS-16025])
-* Minion Container Documentation updates (Issue https://issues.opennms.org/browse/NMS-16088[NMS-16088])
-* Update help text on `import-requisition` Karaf command (Issue https://issues.opennms.org/browse/NMS-16100[NMS-16100])
-* Docs are missing a ValueMappingPropertyExtender example (Issue https://issues.opennms.org/browse/NMS-16106[NMS-16106])
-
-=== Bug
-
-* Intermittent error starting Telemetryd: No adapter found for class: org.opennms.netmgt.telemetry.protocols.netflow.adapter.netflow5.Netflow5Adapter (Issue https://issues.opennms.org/browse/NMS-15345[NMS-15345])
-* Polling fails when rrd-status is set to true (Issue https://issues.opennms.org/browse/NMS-15806[NMS-15806])
-* Provisioning policies do not apply (Issue https://issues.opennms.org/browse/NMS-16031[NMS-16031])
-* Prevent Invalid Node Filter Search from revealing SQL query (Issue https://issues.opennms.org/browse/NMS-16057[NMS-16057])
-* Unable to install alarm history feature on Kubernetes (Issue https://issues.opennms.org/browse/NMS-16070[NMS-16070])
-* Minion and Sentinel just run with Java 1.8 - 11.x instead 11 to 17 (Issue https://issues.opennms.org/browse/NMS-16090[NMS-16090])
-* Cortex-tss-plugin 2.0.1 does not work on v32 (Issue https://issues.opennms.org/browse/NMS-16104[NMS-16104])
-* Update Instrumentation Log Reader to parse IPv6 addresses (Issue https://issues.opennms.org/browse/NMS-16114[NMS-16114])
-
-[[releasenotes-changelog-32.0.2]]
-
-== Release 32.0.2
-
-Release 32.0.2 contains several important security fixes, one fix for a potential DOS vulnerability, and a handful of general bugfixes and enhancements.
-
-Thanks to the following researchers for responsibly disclosing security issues in this release:
-
-* Moshe Appelbaum reported issue NMS-15699.
-* Jordi Morales reported issues NMS-15703, NMS-15782, and NMS-15783.
-* OSS Fuzz reported issue NMS-15877.
-
-The codename for Horizon 32.0.2 is https://volt.fm/genre/6487/anime-lo-fi[Anime Lo-fi].
-
-=== Breaking changes
-
-* This release removes the "3d" variation from the JFreeChart integration, because that style has been removed upstream.
-
-=== Bug
-
-* Document the function hiding Meta-Data values with keynames containing "password" or "secret" (Issue https://issues.opennms.org/browse/NMS-12808[NMS-12808])
-* Prevent Angular evaluation of strings enclosed by two curly braces in non-Angular form-fields and output (Issue https://issues.opennms.org/browse/NMS-15504[NMS-15504])
-* backport fixes from Spring Security 5.x to custom Spring Security 4.2.20.RELEASE (Issue https://issues.opennms.org/browse/NMS-15663[NMS-15663])
-* XXE injection via   /rtc/post using the default rtc credentials (Issue https://issues.opennms.org/browse/NMS-15699[NMS-15699])
-* ROLE_REST can be used to escalate to ROLE_ADMIN via /rest/users (Issue https://issues.opennms.org/browse/NMS-15703[NMS-15703])
-* Stored XSS in multiple JSP files in opennms/opennms (Issue https://issues.opennms.org/browse/NMS-15782[NMS-15782])
-* Reflected XSS in multiple JSP files in opennms/opennms (Issue https://issues.opennms.org/browse/NMS-15783[NMS-15783])
-* POSTINSTALL scriptlet may fail if data/tmp/ is present but empty (Issue https://issues.opennms.org/browse/NMS-15809[NMS-15809])
-* PostgreSQL shows too many clients error with a minimal setup (Issue https://issues.opennms.org/browse/NMS-15852[NMS-15852])
-* java.lang.ArrayIndexOutOfBoundsException: Index 0 out of bounds for length 0 at org.opennms.netmgt.timeseries.samplewrite.MetaTagDataLoader.getNodeCriteriaFromResource(MetaTagDataLoader.java (Issue https://issues.opennms.org/browse/NMS-15854[NMS-15854])
-* Kafka Producer incapable of using SSL (Issue https://issues.opennms.org/browse/NMS-15859[NMS-15859])
-* Fix incorrect resource types for F5 datacollection (Issue https://issues.opennms.org/browse/NMS-15862[NMS-15862])
-* Build fails due to binary file filtered resource copy (Issue https://issues.opennms.org/browse/NMS-15869[NMS-15869])
-* Corrected Keystore setup instructions for minion on docker (Issue https://issues.opennms.org/browse/NMS-16017[NMS-16017])
-* OpenNMS Search Bar does not retrieve nodes without foreignsource and foreignid (Issue https://issues.opennms.org/browse/NMS-16030[NMS-16030])
-* Error on startup with Invalid CEN header exception (Issue https://issues.opennms.org/browse/NMS-16034[NMS-16034])
-
-=== Story
-
-* Provide option to disable Kafka Offset Provider (Issue https://issues.opennms.org/browse/NMS-15336[NMS-15336])
-* Document additional details for BMP integration  (Issue https://issues.opennms.org/browse/NMS-15853[NMS-15853])
-
-=== Enhancement
-
-* Improve Kafka section of message broker docs in the deployment section (Issue https://issues.opennms.org/browse/NMS-15632[NMS-15632])
-* Disable BeanShell interpreter remote server mode (Issue https://issues.opennms.org/browse/NMS-15793[NMS-15793])
-* Include Node metadata in Measurement API query responses even if no resource data exists (Issue https://issues.opennms.org/browse/NMS-15839[NMS-15839])
-* Extend filter syntax to include isSnmpPrimary (Issue https://issues.opennms.org/browse/NMS-15842[NMS-15842])
-* Add docs to describe the default RRD storage retention (Issue https://issues.opennms.org/browse/NMS-16033[NMS-16033])
-
-=== Task
-
-* Document the note to increase the maximum connection when pool size is increased (Issue https://issues.opennms.org/browse/NMS-16050[NMS-16050])
-
-[[releasenotes-changelog-32.0.1]]
-
-== Release 32.0.1
-
-Horizon 32.0.1 includes several general bug fixes and documentation improvements.
-
-The codename for Horizon 32.0.1 is https://volt.fm/genre/3127/a-cappella[A Cappella].
-
-=== Bug
-
-* Database threads stuck idle_in_transaction (Issue https://issues.opennms.org/browse/NMS-15108[NMS-15108])
-* Use UNKNOWN direction when not set in Netflow 9 or IPFIX template (Issue https://issues.opennms.org/browse/NMS-15134[NMS-15134])
-* Minion connectivity config docs start the user in the wrong directory (Issue https://issues.opennms.org/browse/NMS-15618[NMS-15618])
-* Docs need an update on what a Minion is able to do (Issue https://issues.opennms.org/browse/NMS-15620[NMS-15620])
-* Various corrections/clarifications needed in Sentinel install/configure docs (Issue https://issues.opennms.org/browse/NMS-15708[NMS-15708])
-* Memory leak when using Groovy scripts in provisiond ScriptPolicy (Issue https://issues.opennms.org/browse/NMS-15798[NMS-15798])
-* Polling fails when rrd-status is set to true (Issue https://issues.opennms.org/browse/NMS-15806[NMS-15806])
-* ALEC stopped working in 32.0.0 (Issue https://issues.opennms.org/browse/NMS-15808[NMS-15808])
-* Database deadlock triggered by NodeRestService (Issue https://issues.opennms.org/browse/NMS-15816[NMS-15816])
-* Some services do not persist the status (Issue https://issues.opennms.org/browse/NMS-15820[NMS-15820])
-
-=== Enhancement
-
-* Update to alarm docs (Issue https://issues.opennms.org/browse/NMS-15584[NMS-15584])
-* Update Minion Docker install keystore instructions (Issue https://issues.opennms.org/browse/NMS-15803[NMS-15803])
-
-[[releasenotes-changelog-32.0.0]]
-
-== Release 32.0.0
-
-Horizon 32 features a slew of bug fixes and a number of major improvements, most notably the introduction of JDK17 support, and a major uplift in the Newts backend.
-
-The codename for Horizon 32.0.0 is https://volt.fm/genre/3379/cavernous-death-metal[Cavernous Death Metal].
-
-=== Enhancement
-
-* Add lldpRemLocalPortNum in LldpLink Table (Issue https://issues.opennms.org/browse/NMS-7775[NMS-7775])
-* dependabot: JasperReports from 6.3.0 to 6.20.0 (Issue https://issues.opennms.org/browse/NMS-14588[NMS-14588])
-* Enhanced Linkd supports Network-Routers Map (Issue https://issues.opennms.org/browse/NMS-14678[NMS-14678])
-* Destination Path Test Button (Issue https://issues.opennms.org/browse/NMS-14692[NMS-14692])
-* Node Properties REST endpoint doesn't include asset location data (Issue https://issues.opennms.org/browse/NMS-14785[NMS-14785])
-* fix/re-merge additional changes to password validation (Issue https://issues.opennms.org/browse/NMS-14898[NMS-14898])
-* Provide a method to verify topology capability (Issue https://issues.opennms.org/browse/NMS-14909[NMS-14909])
-* Special-case CounterBasedGauge64 in MIB compiler (Issue https://issues.opennms.org/browse/NMS-15210[NMS-15210])
-* Remove contrib from OpenNMS (Issue https://issues.opennms.org/browse/NMS-15268[NMS-15268])
-* Upgrade Groovy to 3.x (Issue https://issues.opennms.org/browse/NMS-15315[NMS-15315])
-* Create an Apache mina-sshd based ssh client service poller. (Issue https://issues.opennms.org/browse/NMS-15431[NMS-15431])
-* Add a method for finding and clearing alarms by TTicketID to OPA's AlarmDAO (Issue https://issues.opennms.org/browse/NMS-15439[NMS-15439])
-* Upgrade Spring Security (Issue https://issues.opennms.org/browse/NMS-15506[NMS-15506])
-* Doc: PersistRegexSelectorStrategy only works on string attributes (Issue https://issues.opennms.org/browse/NMS-15595[NMS-15595])
-* Enable AmbientCapabilities=CAP_NET_RAW CAP_NET_BIND_SERVICE in shipped opennms.service systemd file (Issue https://issues.opennms.org/browse/NMS-15596[NMS-15596])
-* Remove legacy lsb info from Minion initialization script (Issue https://issues.opennms.org/browse/NMS-15604[NMS-15604])
-* Asynchronous polling engine (Issue https://issues.opennms.org/browse/NMS-15623[NMS-15623])
-* Update documentation (or implementation) for newer Slack API (Issue https://issues.opennms.org/browse/NMS-15652[NMS-15652])
-* Make usage statistics sharing notice dialog non-modal (Issue https://issues.opennms.org/browse/NMS-15677[NMS-15677])
-* Docs: Add info about XSLT to XmlCollector (Issue https://issues.opennms.org/browse/NMS-15693[NMS-15693])
-* Doc: Update DNS provisioning import adapter docs (Issue https://issues.opennms.org/browse/NMS-15694[NMS-15694])
-* KSC report "details" should go directly to the related graph, rather than "all" (Issue https://issues.opennms.org/browse/NMS-15711[NMS-15711])
-* Add more collection for selfmonitor node out of box (Issue https://issues.opennms.org/browse/NMS-15742[NMS-15742])
-
-=== Task
-
-* TrivialTimeMonitor & detector (Issue https://issues.opennms.org/browse/NMS-11063[NMS-11063])
-* Rework NMS0123EnIT test (Issue https://issues.opennms.org/browse/NMS-14743[NMS-14743])
-* Multiple CVEs for Axis 1.4 (Issue https://issues.opennms.org/browse/NMS-15061[NMS-15061])
-* Make test for Admin page footer Copyright year (Issue https://issues.opennms.org/browse/NMS-15220[NMS-15220])
-* Fix coverage test containers after we resolve NMS-15401 (Issue https://issues.opennms.org/browse/NMS-15444[NMS-15444])
-* Poll Status History: Enable Poll Status RRD for all services (Issue https://issues.opennms.org/browse/NMS-15641[NMS-15641])
-* Poll Status History: Change documentation to reflect the changes (Issue https://issues.opennms.org/browse/NMS-15642[NMS-15642])
-* Poll Status History: Add RRD graph definitions for all services in a default poller-configuration.xml (Issue https://issues.opennms.org/browse/NMS-15643[NMS-15643])
-* Document async polling settings (Issue https://issues.opennms.org/browse/NMS-15680[NMS-15680])
-* Update docs to capture additional details on BMP config (Issue https://issues.opennms.org/browse/NMS-15713[NMS-15713])
-* Tweak usage statistics sharing notice copy (Issue https://issues.opennms.org/browse/NMS-15740[NMS-15740])
-* Call out usage statistics consent changes in Horizon 32.0.0 release notes (Issue https://issues.opennms.org/browse/NMS-15796[NMS-15796])
-
-=== Bug
-
-* Multiple OpenNMS feature stop working when the Events Forwarder cannot push content to Elasticsearch (Issue https://issues.opennms.org/browse/NMS-13019[NMS-13019])
-* rest api wrong LinkdTopologyProvider graphs (Issue https://issues.opennms.org/browse/NMS-14329[NMS-14329])
-* Inconsistent references to JMXCollect/Monitor for "password-clear"/"password_clear" (Issue https://issues.opennms.org/browse/NMS-14884[NMS-14884])
-* Docker images for Horizon 30.0.4 and later no longer have an editor or a modern pager (Issue https://issues.opennms.org/browse/NMS-14946[NMS-14946])
-* CVE-2014-2228 for org.restlet 1.1.10 (Issue https://issues.opennms.org/browse/NMS-15193[NMS-15193])
-* Page footer missing from Feather / Vue UIs (Issue https://issues.opennms.org/browse/NMS-15262[NMS-15262])
-* Dead transaction in flow thresholding on sentinel (Issue https://issues.opennms.org/browse/NMS-15340[NMS-15340])
-* Event Datetime element parsing changed between M2018 and M2021 (Issue https://issues.opennms.org/browse/NMS-15471[NMS-15471])
-* Backshift graph's Data tab shows incorrect / phantom data when using STACK (Issue https://issues.opennms.org/browse/NMS-15495[NMS-15495])
-* Status Overview box calculation included the alarms and outages from nodes outside of the assigned categories (Issue https://issues.opennms.org/browse/NMS-15526[NMS-15526])
-* When upgrading Minion from an older version on RHEL based systems, the service file doesn't point to the main installation, but rather to /etc/init.d/minion which doesn't exist (Issue https://issues.opennms.org/browse/NMS-15600[NMS-15600])
-* When upgrading Sentinel from an older version, the service file doesn't point to the main installation, but rather to /etc/init.d/sentinel which doesn't exist (Issue https://issues.opennms.org/browse/NMS-15601[NMS-15601])
-* send-events-to-elasticsearch karaf command passes username/password in reverse (Issue https://issues.opennms.org/browse/NMS-15638[NMS-15638])
-* Doc: File name syslog-grok-patterns.txt is wrong (Issue https://issues.opennms.org/browse/NMS-15684[NMS-15684])
-* Stop packaging activemq-web-console.war (Issue https://issues.opennms.org/browse/NMS-15686[NMS-15686])
-* Database deadlock caused by JdbcFilterDao (Issue https://issues.opennms.org/browse/NMS-15696[NMS-15696])
-* Karaf SSH locks up if connections are terminated improperly (Issue https://issues.opennms.org/browse/NMS-15714[NMS-15714])
-* Vue menubar logo link should go to 'homeUrl' (Issue https://issues.opennms.org/browse/NMS-15721[NMS-15721])
-* https redirection is partially broken (Issue https://issues.opennms.org/browse/NMS-15732[NMS-15732])
-* Startup taking > 10 minutes on fresh 32.0.0-SNAPSHOT builds (Issue https://issues.opennms.org/browse/NMS-15751[NMS-15751])
-* Docs need updating to include support for Kafka 3 (Issue https://issues.opennms.org/browse/NMS-15777[NMS-15777])
-* Add /usr/lib64/jvm to find-java.sh search paths (Issue https://issues.opennms.org/browse/NMS-15784[NMS-15784])
-
-=== Research
-
-* Investigate using trivy to scan containers (Issue https://issues.opennms.org/browse/NMS-14781[NMS-14781])
-
-=== Story
-
-* New REST endpoint provides textual description given a top-level usage statistics KPI key name (Issue https://issues.opennms.org/browse/NMS-15476[NMS-15476])
-* Data choices modal dialog removed from first admin user login (Issue https://issues.opennms.org/browse/NMS-15478[NMS-15478])
-* New usage statistics sharing notice dialog (Issue https://issues.opennms.org/browse/NMS-15479[NMS-15479])
-* Usage Statistics Sharing UI (Issue https://issues.opennms.org/browse/NMS-15481[NMS-15481])
-* Data Choices link removed in favor of Usage Statistics Sharing UI (Issue https://issues.opennms.org/browse/NMS-15482[NMS-15482])
-* Data Choices modal dialog removed entirely (Issue https://issues.opennms.org/browse/NMS-15483[NMS-15483])
-* Fresh installs assume usage statistics sharing consent (Issue https://issues.opennms.org/browse/NMS-15485[NMS-15485])
-* Usage statistics sharing UI includes control to revoke sharing consent (Issue https://issues.opennms.org/browse/NMS-15486[NMS-15486])
-* Docs explicitly state that statistics sharing consent is assumed and how to revoke it (Issue https://issues.opennms.org/browse/NMS-15490[NMS-15490])
-* Official documentation describes how to uninstall and block "datachoices" feature (Issue https://issues.opennms.org/browse/NMS-15491[NMS-15491])
-* Existing opted-out installs stay opted out of usage statistics sharing (Issue https://issues.opennms.org/browse/NMS-15492[NMS-15492])
-* Existing opted-out installs never show the Sharing Notice Dialog (Issue https://issues.opennms.org/browse/NMS-15493[NMS-15493])
-* Existing opted-out install Usage Statistics Sharing UI behaves like a revoked install (Issue https://issues.opennms.org/browse/NMS-15494[NMS-15494])
-* Upgrade to Newts 3.0.0 (Issue https://issues.opennms.org/browse/NMS-15514[NMS-15514])
-* Native support for Holt-Winters forecast (no dep on R) (Issue https://issues.opennms.org/browse/NMS-15622[NMS-15622])
-* Review and adjust default and example startup settings (Issue https://issues.opennms.org/browse/NMS-15635[NMS-15635])
 
 === New Feature
 
-* update opennms build and runtime to support JDK17 (Issue https://issues.opennms.org/browse/NMS-15609[NMS-15609])
+* create an asynchronous datacollection engine (Issue https://issues.opennms.org/browse/NMS-15736[NMS-15736])
+* Metadata DSL: VMware Integration (Issue https://issues.opennms.org/browse/NMS-15753[NMS-15753])
+* Metadata DSL: WSMAN Integration (Issue https://issues.opennms.org/browse/NMS-15754[NMS-15754])
+* Metadata DSL: TL1D Integration (Issue https://issues.opennms.org/browse/NMS-15755[NMS-15755])
+* Metadata DSL: JMX Data-collection (Issue https://issues.opennms.org/browse/NMS-15756[NMS-15756])
+* Metadata DSL: XML Data-collection (Issue https://issues.opennms.org/browse/NMS-15757[NMS-15757])
+* Metadata DSL: HTTP/HTTPS Data-collection (Issue https://issues.opennms.org/browse/NMS-15758[NMS-15758])
+* Metadata DSL: Notification Credentials (Issue https://issues.opennms.org/browse/NMS-15759[NMS-15759])
+* Metadata DSL: Ticketer Plugins (Issue https://issues.opennms.org/browse/NMS-15760[NMS-15760])
+* Metadata DSL: Trapd Configuration (Issue https://issues.opennms.org/browse/NMS-15761[NMS-15761])
+* Metadata DSL: JCIFS Monitor (Issue https://issues.opennms.org/browse/NMS-15762[NMS-15762])
+* Metadata DSL: IFTTT Configuration (Issue https://issues.opennms.org/browse/NMS-15763[NMS-15763])
+* Metadata DSL: Repository Configuration (Issue https://issues.opennms.org/browse/NMS-15764[NMS-15764])
+* Metadata DSL: [OPTIONAL] Consistent *-config.xml Configurations (Issue https://issues.opennms.org/browse/NMS-15765[NMS-15765])
+* Metadata DSL: Evaluate feasability to support metadata in Drools rules (Issue https://issues.opennms.org/browse/NMS-15766[NMS-15766])
+* Metadata DSL: Change default poller and collectd configuration files to reflect ability to use metadata (Issue https://issues.opennms.org/browse/NMS-16016[NMS-16016])
+* Metadata DSL: snmp-config.xml & SNMP Profiles (Issue https://issues.opennms.org/browse/NMS-16028[NMS-16028])
+* Metadata DSL: change default opennms-datasources.xml to reflect the possibility of using metadata (Issue https://issues.opennms.org/browse/NMS-16029[NMS-16029])
+* OpenShift: Document the impact of disabling allowPrivilegeEscalation (Issue https://issues.opennms.org/browse/NMS-16239[NMS-16239])
+
+=== Task
+
+* Metadata DSL: Elasticsearch Integration (Issue https://issues.opennms.org/browse/NMS-15752[NMS-15752])
+* Update UI for Admin password change prompt (Issue https://issues.opennms.org/browse/NMS-15780[NMS-15780])
+* Create Initial Node Structure Page (Issue https://issues.opennms.org/browse/NMS-16037[NMS-16037])
+* Update UI dependencies to latest Vue3, feather, etc. (Issue https://issues.opennms.org/browse/NMS-16045[NMS-16045])
+* Node structure page: Union/Intersection category filter switch (Issue https://issues.opennms.org/browse/NMS-16058[NMS-16058])
+* Node structure: add unit tests (Issue https://issues.opennms.org/browse/NMS-16060[NMS-16060])
+* Structured Node List: Add smoke test (Issue https://issues.opennms.org/browse/NMS-16061[NMS-16061])
+* Structured node list: Export CSV/XLS (Issue https://issues.opennms.org/browse/NMS-16064[NMS-16064])
+* Unzip command is missing from UBI images (Issue https://issues.opennms.org/browse/NMS-16087[NMS-16087])
+* Convert Menu store to pinia (Issue https://issues.opennms.org/browse/NMS-16092[NMS-16092])
+* Structured node list: UX Updates (Issue https://issues.opennms.org/browse/NMS-16103[NMS-16103])
+* Structured node list: handle legacy query strings (Issue https://issues.opennms.org/browse/NMS-16116[NMS-16116])
+* Structured node list: UX updates Part 2 (Issue https://issues.opennms.org/browse/NMS-16123[NMS-16123])
+* Structured node list: Merge feature branch to develop (Issue https://issues.opennms.org/browse/NMS-16124[NMS-16124])
+* Convert NodeStructure store to pinia (Issue https://issues.opennms.org/browse/NMS-16125[NMS-16125])
+* Node structure: Add management IP address (Issue https://issues.opennms.org/browse/NMS-16126[NMS-16126])
+* Node structure: Make preferences persistent (Issue https://issues.opennms.org/browse/NMS-16130[NMS-16130])
+* Convert Node store to pinia (Issue https://issues.opennms.org/browse/NMS-16136[NMS-16136])
+* Update Vue UI README with dev workflow instructions (Issue https://issues.opennms.org/browse/NMS-16142[NMS-16142])
+* Convert more stores to pinia (Issue https://issues.opennms.org/browse/NMS-16144[NMS-16144])
+* Convert auth, usageStats and other stores to pinia (Issue https://issues.opennms.org/browse/NMS-16154[NMS-16154])
+* Convert deviceStore etc to pinia, remove vuex from project (Issue https://issues.opennms.org/browse/NMS-16156[NMS-16156])
+* DOCS: Document structured node list (Issue https://issues.opennms.org/browse/NMS-16210[NMS-16210])
+* Docs: Remove reference to 'opennms-cloud-plugin' plugin (Issue https://issues.opennms.org/browse/NMS-16231[NMS-16231])
+* Stalled threads in telemetryd parser (Issue https://issues.opennms.org/browse/NMS-16243[NMS-16243])
